# cmake-weak-dependency

./: CMakeLists.txt
.github/workflows/: main.yml
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
src/: main.c  sound_device.c  sound_device.h
